Updated resampling supplemental figure

--- a/notebooks/modeling_paper_figures.ipynb
+++ b/notebooks/modeling_paper_figures.ipynb
@@ -1992,8 +1992,8 @@
    "source": [
     "original_matlab_df = pd.DataFrame(columns=['condition','original_r', 'full_resample_r','100000_resample_r', '10000_resample_r', '5000_resample_r', '1000_resample_r'])\n",
     "for i in range(1,301):\n",
-    "    paired_raw = pd.read_excel(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'raw_matlab'/f'GenePaired_Run{i}.xlsx','fig_supp_zinani_resample'))\n",
-    "    unpaired_raw = pd.read_excel(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'raw_matlab'/f'GeneUnpaired_Run{i}.xlsx','fig_supp_zinani_resample'))\n",
+    "    paired_raw = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'raw_matlab'/f'GenePaired_Run{i}.csv','fig_supp_zinani_resample'))\n",
+    "    unpaired_raw = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'raw_matlab'/f'GeneUnpaired_Run{i}.csv','fig_supp_zinani_resample'))\n",
     "    result_paired = np.zeros(6)\n",
     "    result_unpaired = np.zeros(6)\n",
     "    result_paired[0],_   = scipy.stats.spearmanr(paired_raw.mh1, paired_raw.mh7)\n",
@@ -2006,8 +2006,8 @@
     "        re_mh1 = scipy.interpolate.interp1d(unpaired_raw.Time, unpaired_raw.mh1, kind='previous')(np.linspace(0, 240, resample_n))\n",
     "        re_mh7 = scipy.interpolate.interp1d(unpaired_raw.Time, unpaired_raw.mh7, kind='previous')(np.linspace(0, 240, resample_n))\n",
     "        result_unpaired[i + 1],_ = scipy.stats.spearmanr(re_mh1, re_mh7)\n",
-    "    original_matlab_df.loc[(i - 1) * 2] = ['paired', *result_paired]\n",
-    "    original_matlab_df.loc[((i - 1) * 2) + 1] = ['unpaired', *result_unpaired]\n",
+    "    original_matlab_df.loc[len(original_matlab_df)] = ['paired', *result_paired]\n",
+    "    original_matlab_df.loc[len(original_matlab_df)] = ['unpaired', *result_unpaired]\n",
     "    print('.', end='')\n"
    ]
   },
@@ -2017,7 +2017,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_matlab_df"
+    "for col in ['original_r', 'full_resample_r','100000_resample_r', '10000_resample_r', '5000_resample_r', '1000_resample_r']:\n",
+    "    sns.violinplot(data=original_matlab_df, x='condition', y=col)\n",
+    "    plt.ylim([-0.2,1.0])\n",
+    "    plt.title(col)\n",
+    "    plt.show()"
    ]
   },
   {
