Updated all merge scripts
Updated toggles figure B/C

Updated toggles figure generation to new dataset

Initial sc density/burst analysis

Updated initial analysis of bursts

Updated transfection simulation and experimental results

Added marginals to exp/sim plots

Updated example figure with supercoiling density

First draft of modeling figure

Split spacing sweep and hyperparams sweep into separate files

Added burst dynamics to toggles figure

--- a/notebooks/experimental/2021.12-tangles_flow.ipynb
+++ b/notebooks/experimental/2021.12-tangles_flow.ipynb
@@ -82,12 +82,14 @@
    "source": [
     "# Import our three datasets\n",
     "n_gene_regex = re.compile(r'^293T\\.(?P<condition>\\d-gene(?:\\.\\w+)?)\\.(?P<dox>.*)-dox\\.(?P<rep>\\d)-rep_Single Cells')\n",
+    "control_regex = re.compile(r'^293T\\.(?P<condition>[^.]+)\\.(?P<rep>\\d)-rep_Single Cells')\n",
     "cell_transfection_regex = re.compile(r'^export_(?P<celltype>[^.]+)\\.(?P<condition>\\dg\\.\\w+)\\.(?P<dox>.*)dox\\.r(?P<rep>\\d)_Single Cells')\n",
     "pb_regex = re.compile(r'^export_(?P<celltype>[^.]+)\\.(?P<condition>(\\d[gc]\\.\\w+|\\w+))(.\\d)?\\.(?P<dox>.*)dox\\.r(?P<rep>\\d)_Single Cells')\n",
     "first_transfection_dataset = []\n",
+    "control_dataset = []\n",
     "cell_transfection_dataset = []\n",
     "pb_dataset = []\n",
-    "for file in Path('../output/flow/2021.05.07-T2.0/').glob('*.csv'):\n",
+    "for file in Path('../../output/flow/2021.05.07-T2.0/').glob('*.csv'):\n",
     "    exp_match = n_gene_regex.match(file.stem)\n",
     "    if exp_match is not None:\n",
     "        first_transfection_dataset.append(pd.read_csv(file))\n",
@@ -96,7 +98,14 @@
     "        dox_str = exp_match.group('dox')\n",
     "        first_transfection_dataset[-1]['dox'] = dox_string_to_float(dox_str)\n",
     "        first_transfection_dataset[-1]['replicate'] = int(exp_match.group('rep'))\n",
-    "for file in Path('../output/flow/2021.10.18-transfection/export/').glob('*.csv'):\n",
+    "for file in Path('../../output/flow/2021.05.07-T2.0/').glob('*.csv'):\n",
+    "    control_match = control_regex.match(file.stem)\n",
+    "    if control_match is not None:\n",
+    "        control_dataset.append(pd.read_csv(file))\n",
+    "        control_dataset[-1]['celltype'] = '293T'\n",
+    "        control_dataset[-1]['condition'] = control_match.group('condition')\n",
+    "\n",
+    "for file in Path('../../output/flow/2021.10.18-transfection/export/').glob('*.csv'):\n",
     "    match = cell_transfection_regex.match(file.stem)\n",
     "    if match is not None:\n",
     "        dataset = pd.read_csv(file)\n",
@@ -107,7 +116,7 @@
     "        cell_transfection_dataset[-1]['condition'] = match.group('condition').replace('g.','-gene.')\n",
     "        cell_transfection_dataset[-1]['dox'] = dox_string_to_float(match.group('dox'))\n",
     "        cell_transfection_dataset[-1]['replicate'] = int(match.group('rep'))\n",
-    "for file in Path('../output/flow/2021.11.07-flow_tangles_integration/').glob('*.csv'):\n",
+    "for file in Path('../../output/flow/2021.11.07-flow_tangles_integration/').glob('*.csv'):\n",
     "    match = pb_regex.match(file.stem)\n",
     "    if match is not None:\n",
     "        pb_dataset.append(pd.read_csv(file))\n",
@@ -120,6 +129,7 @@
     "        pb_dataset[-1]['dox'] = dox_string_to_float(match.group('dox'))\n",
     "        pb_dataset[-1]['replicate'] = int(match.group('rep'))\n",
     "first_transfection_dataset = pd.concat(first_transfection_dataset, ignore_index=True)\n",
+    "control_dataset = pd.concat(control_dataset, ignore_index=True)\n",
     "cell_transfection_dataset = pd.concat(cell_transfection_dataset, ignore_index=True)\n",
     "pb_dataset = pd.concat(pb_dataset, ignore_index=True)"
    ]
@@ -131,9 +141,22 @@
    "outputs": [],
    "source": [
     "# Postprocess\n",
+    "mRuby2_control_intensity = sorted(control_dataset[(control_dataset.condition == 'iRFP670') & (control_dataset['iRFP670-A'] > 2e2)]['mRuby2-A'])\n",
+    "mRuby2_gate = mRuby2_control_intensity[int(len(mRuby2_control_intensity) * 0.95)]\n",
+    "gated_transfection = cell_transfection_dataset[\n",
+    "    (cell_transfection_dataset['iRFP670-A'] > 2e2) &\n",
+    "    (cell_transfection_dataset['mRuby2-A'] > mRuby2_gate)].copy()\n",
     "gated_initial_dataset = first_transfection_dataset[first_transfection_dataset['iRFP670-A'] > 2e2].copy()\n",
-    "gated_transfection = cell_transfection_dataset[cell_transfection_dataset['iRFP670-A'] > 2e2].copy()\n",
     "gated_pb = pb_dataset[pb_dataset['iRFP670-A'] > 2e2].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gated_initial_dataset.condition.unique()"
    ]
   },
   {
@@ -178,7 +201,7 @@
     "axes[1].set_yticks(np.arange(0,6,1))\n",
     "axes[0].set_ylabel('Integration Efficiency')\n",
     "fig.align_ylabels(axes)\n",
-    "plt.savefig('../img/t2.0/piggybac_integration.svg', bbox_inches='tight')\n",
+    "plt.savefig('../../img/t2.0/piggybac_integration.svg', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -226,7 +249,30 @@
     "plt.legend(bbox_to_anchor=(-1, 2))\n",
     "for text, s in zip(plt.legend().get_texts(), ['Uninduced', '10^-3.5 dox', '10^-2.5 dox', '10^-1.5 dox', '10^-0.5 dox']):\n",
     "    text.set_text(s)\n",
-    "plt.savefig('../img/t2.0/celltype_tangles_mRuby2_response.svg', bbox_inches='tight')\n",
+    "plt.savefig('../../img/t2.0/celltype_tangles_mRuby2_response.svg', bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('ticks')\n",
+    "sns.set_context('paper')\n",
+    "plot_df['recentered_mRuby2'] = plot_df['log mRuby2-A'] - 2\n",
+    "plot_df['recentered_EGFP'] = plot_df['log eGFP-A'] - 1.2\n",
+    "g = sns.jointplot(data=plot_df[(plot_df.condition == '3-gene.Divergent') & ((plot_df.dox == 0.0) | (plot_df.dox == np.max(plot_df.dox)))],\n",
+    "              x='recentered_EGFP', y='recentered_mRuby2', hue='dox', fill=True, kind='kde', alpha=0.5, legend=None,\n",
+    "              palette = {0.0:'#555555', np.max(plot_df.dox):'#25ada3'})\n",
+    "g.ax_marg_x.remove()\n",
+    "g.ax_joint.set_xlabel('Exp. log EGFP')\n",
+    "g.ax_joint.set_ylabel('Exp. log mRuby2')\n",
+    "plt.gcf().set_figwidth(2)\n",
+    "plt.gcf().set_figheight(1)\n",
+    "sns.despine()\n",
+    "plt.savefig('../../img/experimental_divergent_transfection.svg', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -273,7 +319,7 @@
     "plt.legend(bbox_to_anchor=(-1, 2))\n",
     "for text, s in zip(plt.legend().get_texts(), ['Uninduced', '10^-3.5 dox', '10^-2.5 dox', '10^-1.5 dox', '10^-0.5 dox']):\n",
     "    text.set_text(s)\n",
-    "plt.savefig('../img/t2.0/pb_integration_mRuby2_response.svg', bbox_inches='tight')\n",
+    "plt.savefig('../../img/t2.0/pb_integration_mRuby2_response.svg', bbox_inches='tight')\n",
     "plt.show()\n",
     "sns.set_style('whitegrid')\n",
     "for log_str, normed_str, xlim, ylim in [\n",
@@ -309,7 +355,7 @@
     "\n",
     "    for (row_val,col_val), ax in grid.axes_dict.items():\n",
     "        ax.set_facecolor(light_background_palette[row_val])\n",
-    "    plt.savefig('../img/t2.0/pb_integration_dotplot.png', bbox_inches='tight', dpi=300)\n",
+    "    plt.savefig('../../img/t2.0/pb_integration_dotplot.png', bbox_inches='tight', dpi=300)\n",
     "    plt.show()"
    ]
   },
@@ -417,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
