Fully functional version of all figures, for the initial draft of the modeling paper.
Squashed commits:
Fully functional version of all figures
Added spacing and hyperparameter merge scripts
Initial rewrite of paper using new figure versions
Added Mathematica notebook for bubble calculation
Added supplemental torque/energy response figure
Updated axis limits on torque/energy plot
Updated base model figure and supplemental figure
Updated sc density plots
Updated various figures
Updated figure captions and more rewrites
Updated modeling paper with additional supplemental figure
Added n=1 supplemental figure and outputted helpful percentages
Full text revision completed, with additional supplemental figures
Added first revision of many cartoon figures
Added Zinani cartoons and first draft of supercoiling figure
Modeling paper edits and cartoon updates
Various figure upgrades
Various figure updates, removed deprecated numbered figures
Full group-ready draft :)
Added notebook to generate figures for seminar
Updated seminar figures to output energy diagrams at different aspect ratio
Updated flow plot seminar figures
Updated full-example export and updated seminar figures
Updated gitignores
Added video generation
Updated seminar figure making with movie making
Updated movies to only show reduced timespan
Switched to 30 second movies

--- a/writeups/figures/modeling_paper/LaTeX2AI_header.tex
+++ b/writeups/figures/modeling_paper/LaTeX2AI_header.tex
@@ -32,3 +32,6 @@
 
 % Add needed packages and macros here:
 \usepackage{mathtools}
+
+\usepackage[charter]{mathdesign}
+\usepackage[scaled=.96,osf]{XCharter}
