Updated gitignore to ignore generated figures
Updated illustrators

Updated diagrams and updated code to generate all figures from a clean start

Removed unneeded panels from base model figure

Updated schematics to better fit figure asthetic

Updated toggle switch figure to have new graphical layout

Updated modeling paper text

Tested different color palettes, minor changes

Updated figures and text

Nitpick edits to figure 3

Edits to toggle switch figure, unification

Aligned Zinani figure, changed color scheme

Initial revisions to single-cell examples figure

Tweaked layout of subplot C

--- a/writeups/figures/modeling_paper/LaTeX2AI_header.tex
+++ b/writeups/figures/modeling_paper/LaTeX2AI_header.tex
@@ -26,6 +26,7 @@
 \documentclass[class=scrartcl]{standalone}
 \KOMAoptions{fontsize=11pt}
 \usepackage{amsmath}
+\usepackage{xcolor}
 
 % All items can be scaled using this variable. This variable HAS to be defined (default 1).
 \newcommand{\itemscalefactor}{1}
