Final pre-copyediting version of figures and text.
Squashed commits:
Complete rework of all figures
Figure updates
Updated all drawn figures
Updated latest revisions of figures
Final tweaks to some supplement
Flipped the order of E/F in base model figure
Updated figure tweaks to go with text revisions
Additional figure changes, pre-revision text edits
Added supplemental figure fir different induction condition
Figure updates, change plotted labels slightly
Updated movies to use new color scheme
Updated modeling paper with new post-PI revisions
Updated figures, tweaked supp figure text limits
Additional figure and text editing, especially around the discussion
Updated zinani a=0.02 plot
Removed unneeded stochastic SC initial Python implementation
NB-cleaned topology param sweep

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "main_palette = {\n",
-    "    'tandem': '#CB7723',\n",
-    "    'tandem_alt': '#E6A86A',\n",
-    "    'convergent': '#3C82B0',\n",
-    "    'divergent': '#AC4140',\n",
+    "    'tandem': '#225A9B',\n",
+    "    'tandem_alt': '#19D2BF',\n",
+    "    'convergent': '#FFB133',\n",
+    "    'divergent': '#FE484E',\n",
     "    'gray': '#666666',\n",
     "    'light_gray': '#888888',\n",
     "    'axis_gray': '#262626'\n",
