Updated movie-generating figures

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import itertools\n",
     "sns.set_style('ticks')\n",
-    "sns.set_context('talk',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})\n",
+    "sns.set_context('paper',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})\n",
     "\n",
     "import rushd as rd"
    ]
@@ -524,16 +524,16 @@
     "plot_df['recentered_EGFP'] = plot_df['log eGFP-A'] - 1.2\n",
     "g = sns.jointplot(data=plot_df[(plot_df.condition == '3-gene.Divergent') & ((plot_df.dox == 0.0) | (plot_df.dox == np.max(plot_df.dox)))],\n",
     "              x='recentered_EGFP', y='recentered_mRuby2', hue='dox', fill=True, kind='kde', alpha=0.5, legend=None,\n",
-    "              palette = {0.0:main_palette['gray'], np.max(plot_df.dox):main_palette['divergent']})\n",
+    "              palette = {0.0:main_palette['gray'], np.max(plot_df.dox):main_palette['divergent']}, height=1.5)\n",
     "g.ax_marg_x.remove()\n",
     "g.ax_joint.text(0.2, 3.0, 'Reporter only', color=main_palette['gray'])\n",
     "g.ax_joint.text(2.5, 0.6, 'Adjacent\\nexpression', color=main_palette['divergent'])\n",
     "g.ax_joint.set_ylim([0,3.5])\n",
     "g.ax_joint.set_xlim([-0.5,4])\n",
-    "g.ax_joint.set_xlabel('Experimental log adjacent gene')\n",
-    "g.ax_joint.set_ylabel('Experimental log reporter gene')\n",
+    "g.ax_joint.set_xlabel('Adjacent expression')\n",
+    "g.ax_joint.set_ylabel('Reporter expression')\n",
     "sns.despine()\n",
-    "plt.savefig(rd.outfile(rd.rootdir/'img'/'exp_divergent.svg'), bbox_inches='tight')\n",
+    "plt.savefig(rd.outfile(rd.rootdir/'img'/'exp_divergent_paperscale.svg'), bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -610,10 +610,10 @@
     "    max_length = data_group.attrs['bcs.length']\n",
     "    max_gene_length = max([abs(gene[1] - gene[0]) for gene in genes])\n",
     "\n",
-    "    fig = plt.figure(figsize=(1920 / dpi,1000 / dpi))\n",
-    "    plot_ax = plt.subplot(3, 4, (1,4))\n",
-    "    sigma_ax = plt.subplot(3,4, (5,8))\n",
-    "    mRNA_ax = plt.subplot(3, 4, 9 + ex_offset)\n",
+    "    fig = plt.figure(figsize=(1400 / dpi,700 / dpi))\n",
+    "    plot_ax = plt.subplot2grid((2,2), (0,0))\n",
+    "    sigma_ax = plt.subplot2grid((2,2), (1,0))\n",
+    "    mRNA_ax = plt.subplot2grid((2,2), (0,1), rowspan=2)\n",
     "\n",
     "    plot_ax.set_xlim([0,max_length])\n",
     "    plot_ax.set_ylim([-20, 100 + max_gene_length])\n",
@@ -644,6 +644,8 @@
     "    mRNA_ax.set_xticks([0, 10000, 3600 * 6])\n",
     "    mRNA_ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
     "\n",
+    "    fig.tight_layout()\n",
+    "\n",
     "    sigma_ax.axhline(0, color=main_palette['axis_gray'])\n",
     "    sigma_line = sigma_ax.plot([], [], linewidth=3, color='#3d8c7d')[0]\n",
     "\n",
@@ -670,14 +672,6 @@
     "\n",
     "    polymerases = plot_ax.plot([], [], marker=ellipse_path, ls='',\n",
     "                        mec='#3d8c7d', mfc='#82d4bd', mew=2, ms=15, zorder=2.5)[0]\n",
-    "\n",
-    "    temp_subplots = [plt.subplot(3,4,subplot_idx) for subplot_idx in range(9,13) if subplot_idx != 9 + ex_offset]\n",
-    "    for subplot in temp_subplots:\n",
-    "        subplot.set_xlabel('Time (hr)')\n",
-    "        subplot.set_ylabel('# mRNAs')\n",
-    "    fig.tight_layout()\n",
-    "    for subplot in temp_subplots:\n",
-    "        subplot.set(visible=False)\n",
     "\n",
     "    def init():\n",
     "        mRNA_lines.set_linewidth(3)\n",
@@ -742,19 +736,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_animation(movie_examples['tangles_full_run.000018'], [main_palette['tandem'], main_palette['gray']], 0, rd.outfile(rd.rootdir/'output'/'test_out_tandem_upstream.mp4'), 30*30, tspan=[0,3600*6], mRNA_remap={0:1, 1:0})\n",
-    "gen_animation(movie_examples['tangles_full_run.000022'], [main_palette['gray'], main_palette['tandem_alt']], 1, rd.outfile(rd.rootdir/'output'/'test_out_tandem_downstream.mp4'), 30*30, tspan=[0,3600*6])\n",
-    "gen_animation(movie_examples['tangles_full_run.000025'], [main_palette['gray'], main_palette['convergent']], 2, rd.outfile(rd.rootdir/'output'/'test_out_convergent.mp4'), 30*30, tspan=[0,3600*6])\n",
-    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 3, rd.outfile(rd.rootdir/'output'/'test_out_divergent.mp4'), 30*30, tspan=[0,3600*6])"
+    "gen_animation(movie_examples['tangles_full_run.000018'], [main_palette['tandem'], main_palette['gray']], 0, rd.outfile(rd.rootdir/'output'/'test_out_tandem_upstream.mp4'), 15*30, tspan=[0,3600*6], mRNA_remap={0:1, 1:0})\n",
+    "gen_animation(movie_examples['tangles_full_run.000022'], [main_palette['gray'], main_palette['tandem_alt']], 1, rd.outfile(rd.rootdir/'output'/'test_out_tandem_downstream.mp4'), 15*30, tspan=[0,3600*6])\n",
+    "gen_animation(movie_examples['tangles_full_run.000025'], [main_palette['gray'], main_palette['convergent']], 2, rd.outfile(rd.rootdir/'output'/'test_out_convergent.mp4'), 15*30, tspan=[0,3600*6])\n",
+    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 3, rd.outfile(rd.rootdir/'output'/'test_out_divergent.mp4'), 15*30, tspan=[0,3600*6])"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "35596c0d4d50b3cf51088ffaabe9a8701552f7de3deccc6f17efae06fe0a22a4"
+   "hash": "393577709b641b15c2aa1de8cfe0868d00094c5de3ea5b0856cceab616d9a2d4"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('env': venv)",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
