Updated presentation movies and joint plot

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -54,6 +54,7 @@
     "    'subaxis_title': 9,\n",
     "    'line_annotation': 8,\n",
     "    'data_annotation': 8,\n",
+    "    'base_size': 8,\n",
     "}\n",
     "light_palette = {k:v + '28' for k, v in main_palette.items()}\n",
     "no_yellow_viridis = matplotlib.colors.ListedColormap(cm.get_cmap('viridis', 256)(np.linspace(0,0.8,256)))\n",
@@ -569,6 +570,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if (rd.datadir/'projects'/'tangles'/'simulations'/'fig_base_model_summary.gzip.0').exists():\n",
+    "    base_model_df = pd.read_parquet(\n",
+    "        rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'fig_base_model_summary.gzip.0', 'fig_base_model'), memory_map=True\n",
+    "    )\n",
+    "    for i in range(1,8):\n",
+    "        base_model_df = base_model_df.append(\n",
+    "            pd.read_parquet(rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/f'fig_base_model_summary.gzip.{i}', 'fig_base_model'), memory_map=True),\n",
+    "            ignore_index=True\n",
+    "        )\n",
+    "    print(f'Loaded {len(base_model_df)} total simulation runs from Parquet cached file')\n",
+    "else:\n",
+    "    base_model_df = []\n",
+    "    with h5py.File(\n",
+    "        rd.infile(rd.datadir/'projects'/'tangles'/'simulations'/'modeling_model_bc_topo_selection_summaries.h5', 'fig_base_model_cache'), 'r') as summaries:\n",
+    "        for group in summaries.keys():\n",
+    "            group_df = []\n",
+    "            for run in summaries[group].values():\n",
+    "                if not run.attrs['comment'].decode('utf-8').startswith('fig.bm'):\n",
+    "                    continue\n",
+    "                group_df.append(pd.DataFrame(data={\n",
+    "                    'inducible_mRNA': run['final_mRNA'][0,:],\n",
+    "                    'constant_mRNA': run['final_mRNA'][1,:]}))\n",
+    "                group_df[-1]['induction'] = run.attrs['gene.base_rate'][0]\n",
+    "                group_df[-1]['condition'] = run.attrs['comment'].decode('utf-8')\n",
+    "                group_df[-1]['is_plasmid'] = run.attrs['bcs.is_circular']\n",
+    "                for term in [\n",
+    "                    'rates.sc_dependent', 'coeff.sigma_squared',\n",
+    "                    'coeff.mRNA_drag_exponent', 'coeff.mRNA_drag_coeff',\n",
+    "                    'rnap.max_velocity', 'rnap.stall_torque', 'rnap.stall_width']:\n",
+    "                    group_df[-1][term] = run.attrs[term]\n",
+    "                gene_endpoints = sorted(np.concatenate((\n",
+    "                    run.attrs['gene.start'],\n",
+    "                    run.attrs['gene.end'])))\n",
+    "                group_df[-1]['spacing'] = int((gene_endpoints[2] - gene_endpoints[1]) / 0.34)\n",
+    "            base_model_df.append(pd.concat(group_df, ignore_index=True))\n",
+    "            print(f'Loaded {len(base_model_df[-1])} simulations...')\n",
+    "    base_model_df = pd.concat(base_model_df, ignore_index=True)\n",
+    "    print(f'Loaded {len(base_model_df)} total simulation runs!')\n",
+    "    base_model_df['condition'] = pd.Categorical(base_model_df['condition'])\n",
+    "    for i, split in enumerate(np.array_split(base_model_df, 8)):\n",
+    "        split.to_parquet(rd.outfile(rd.datadir/'projects'/'tangles'/'simulations'/f'fig_base_model_summary.gzip.{i}', 'fig_base_model_cache'), compression='gzip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Randomly downsample (replace later)\n",
+    "base_model_df = base_model_df.sample(frac=0.3, random_state=2022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot distribution data\n",
+    "fig_joint_dist = plt.figure(figsize=(7.30,3.5))\n",
+    "fig_joint_dist_gridspec = gridspec.GridSpec(1, 2, figure=fig_joint_dist,\n",
+    "    wspace=0.1, hspace=0.15)\n",
+    "fig_joint_dist_subfigures = {\n",
+    "    'A': fig_joint_dist.add_subfigure(fig_joint_dist_gridspec[0,0]),\n",
+    "    'B': fig_joint_dist.add_subfigure(fig_joint_dist_gridspec[0,1]),\n",
+    "}\n",
+    "fig_joint_palette = {\n",
+    "    'fig.bm.tandem_reporter_upstream': main_palette['tandem'],\n",
+    "    'fig.bm.tandem_reporter_downstream': main_palette['tandem_alt'],\n",
+    "    'fig.bm.convergent': main_palette['convergent'],\n",
+    "    'fig.bm.divergent': main_palette['divergent']\n",
+    "}\n",
+    "fig_joint_dist_noise_axes = []\n",
+    "for is_plasmid, subfig, noise_offset in zip([0,1], [fig_joint_dist_subfigures[x] for x in 'AB'], [[-0.06,0], [0.3,0]]):\n",
+    "    df_bm_dist = base_model_df[\n",
+    "        (\n",
+    "            base_model_df['is_plasmid'] == is_plasmid\n",
+    "        ) & (\n",
+    "            (base_model_df['condition'] == 'fig.bm.tandem_reporter_upstream') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.tandem_reporter_downstream') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.convergent') |\n",
+    "            (base_model_df['condition'] == 'fig.bm.divergent')\n",
+    "        ) & (\n",
+    "            np.abs(base_model_df['induction'] - 8.0e-3) < 1e-4\n",
+    "        ) & (\n",
+    "            (base_model_df['rates.sc_dependent'] == 1.0) &\n",
+    "            (np.abs(base_model_df['coeff.sigma_squared'] - 0.025) < 0.001)\n",
+    "        )\n",
+    "    ].copy()\n",
+    "    df_bm_dist['condition'] = df_bm_dist['condition'].cat.remove_unused_categories()\n",
+    "    df_bm_dist['norm_reporter']  = df_bm_dist['constant_mRNA'] / 340.0\n",
+    "    df_bm_dist['norm_inducible'] = df_bm_dist['inducible_mRNA'] / 340.0\n",
+    "    subfig.subplots_adjust(left=0.2, bottom=0.25, right=0.9, top=0.8)\n",
+    "    fig_joint_dist_dist_axes = subfig.subplots(ncols=2, sharey=False, gridspec_kw={'wspace': 0.5, 'width_ratios':[5, 1]})\n",
+    "    for condition, noise_yloc in zip(['fig.bm.convergent', 'fig.bm.divergent', 'fig.bm.tandem_reporter_downstream', 'fig.bm.tandem_reporter_upstream'], [1,1,0.9,1.1]):\n",
+    "        df_plot_dist = df_bm_dist[df_bm_dist.condition == condition]\n",
+    "        # Compute distribution noise\n",
+    "        ext_noise = np.var((df_plot_dist.norm_inducible + df_plot_dist.norm_reporter) / 2.0)\n",
+    "        int_noise = np.var((df_plot_dist.norm_inducible - df_plot_dist.norm_reporter) / 2.0)\n",
+    "        fig_joint_dist_dist_axes[1].plot(noise_yloc, int_noise / ext_noise, 'o', color=fig_joint_palette[condition])\n",
+    "        sns.kdeplot(data=df_plot_dist,\n",
+    "                    x='norm_inducible', y='norm_reporter', color=fig_joint_palette[condition], alpha=0.9, linewidths=0.8,\n",
+    "                    ax=fig_joint_dist_dist_axes[0], levels=5 if is_plasmid else 8)\n",
+    "    sns.despine(ax=fig_joint_dist_dist_axes[0])\n",
+    "    fig_joint_dist_dist_axes[0].set_aspect('equal')\n",
+    "    sns.despine(ax=fig_joint_dist_dist_axes[1], bottom=True)\n",
+    "    # Configure the noise ratio plot\n",
+    "    fig_joint_dist_dist_axes[1].xaxis.set_visible(False)\n",
+    "    fig_joint_dist_dist_axes[1].text(0.5, 0.95, 'Noise\\nratio', ha='center', ma='center', transform=fig_joint_dist_dist_axes[1].transAxes)\n",
+    "    fig_joint_dist_dist_axes[1].set_xlim([0.8,1.2])\n",
+    "    fig_joint_dist_dist_axes[1].set_yscale('log')\n",
+    "    fig_joint_dist_dist_axes[0].set_xlim([0.0, 1.0])\n",
+    "    fig_joint_dist_dist_axes[0].set_ylim([0.0, 1.0])\n",
+    "    fig_joint_dist_dist_axes[0].set_xticks(np.linspace(0.0,1.0,5))\n",
+    "    fig_joint_dist_dist_axes[0].set_yticks(np.linspace(0.0,1.0,5))\n",
+    "\n",
+    "    fig_joint_dist_dist_axes[0].set_xlabel('Inducible gene output')\n",
+    "    fig_joint_dist_dist_axes[0].set_ylabel('Reporter output')\n",
+    "\n",
+    "    o_x = noise_offset[0]\n",
+    "    o_y = noise_offset[1]\n",
+    "    fig_joint_dist_dist_axes[0].annotate(text='', xytext=(0.25 + o_x, 0.05 + o_y), xy=(0.1 + o_x, 0.2 + o_y),\n",
+    "        arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
+    "    fig_joint_dist_dist_axes[0].annotate(text='', xytext=(0.25 + o_x, 0.05 + o_y), xy=(0.4 + o_x, 0.2 + o_y),\n",
+    "        arrowprops={'facecolor': 'black', 'edgecolor': '#000000ff', 'width': 0.8, 'headwidth': 5.0, 'headlength': 5.0, 'shrink': 0.0, 'capstyle': 'round'})\n",
+    "    fig_joint_dist_dist_axes[0].text(0.18 + o_x, 0.05 + o_y, 'int.', horizontalalignment='right', transform=fig_joint_dist_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    fig_joint_dist_dist_axes[0].text(0.32 + o_x, 0.05 + o_y, 'ext.', horizontalalignment='left', transform=fig_joint_dist_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    subfig.text(0.25 + o_x, 0.20 + o_y, 'noise', horizontalalignment='center', transform=fig_joint_dist_dist_axes[0].transData, fontsize=font_sizes['data_annotation'], fontstyle='italic')\n",
+    "    fig_joint_dist_noise_axes.append(fig_joint_dist_dist_axes[1])\n",
+    "fig_joint_dist_subfigures['A'].text(0.5, 0.85, 'Linear boundary conditions', ha='center')\n",
+    "fig_joint_dist_subfigures['B'].text(0.5, 0.85, 'Circular boundary conditions', ha='center')\n",
+    "fig_joint_dist_noise_axes[0].set_ylim((0.1, 50))\n",
+    "fig_joint_dist_noise_axes[0].set_yticks([0.1,1.0,10.0])\n",
+    "fig_joint_dist_noise_axes[0].set_yticklabels(['0.1','1.0', '10.0'])\n",
+    "fig_joint_dist_noise_axes[1].set_ylim((0.01, 0.5))\n",
+    "fig_joint_dist_noise_axes[1].set_yticks([0.01,0.1])\n",
+    "fig_joint_dist_noise_axes[1].set_yticklabels(['0.01','0.1'])\n",
+    "fig_joint_dist.savefig('test.svg')\n",
+    "fig_joint_dist.savefig(rd.outfile(rd.rootdir/'img'/'presentation_joint_distributions.svg'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.rcParams['animation.ffmpeg_path'] = r'C:\\Users\\ChemeGrad2019\\Downloads\\ffmpeg-2020-12-09-git-7777e5119a-full_build\\bin\\ffmpeg.exe'\n",
     "#sns.set_context('talk',rc={'font.family': 'sans-serif', 'font.sans-serif':['Helvetica Neue']})\n",
     "ffmpeg_writer = animation.FFMpegWriter(fps=30, codec='libx264', extra_args=['-crf', '18', '-pix_fmt', 'yuv420p'])\n",
@@ -599,7 +748,7 @@
     "ellipse_path = matplotlib.path.Path(all_points,\n",
     "    codes=([matplotlib.path.Path.MOVETO] + [matplotlib.path.Path.CURVE4]*12 + [matplotlib.path.Path.CLOSEPOLY]) * 2\n",
     ")\n",
-    "def gen_animation(data_group, gene_colors, ex_offset, filename, n_frames, dpi=120, mRNA_remap=None, tspan=None):\n",
+    "def gen_animation(data_group, gene_colors, title, subtitle, filename, n_frames, dpi=120, mRNA_remap=None, tspan=None):\n",
     "    genes = list(zip(data_group.attrs['gene.start'], data_group.attrs['gene.end']))\n",
     "    gene_directions = [1 - 2 * (gene[0] > gene[1]) for gene in genes]\n",
     "\n",
@@ -610,7 +759,9 @@
     "    max_length = data_group.attrs['bcs.length']\n",
     "    max_gene_length = max([abs(gene[1] - gene[0]) for gene in genes])\n",
     "\n",
-    "    fig = plt.figure(figsize=(1400 / dpi,700 / dpi))\n",
+    "    fig = plt.figure(figsize=(1900 / dpi,950 / dpi))\n",
+    "    fig.text(0.28, 0.9, title, ha='center')\n",
+    "    fig.text(0.28, 0.85, subtitle, ha='center', style='italic')\n",
     "    plot_ax = plt.subplot2grid((2,2), (0,0))\n",
     "    sigma_ax = plt.subplot2grid((2,2), (1,0))\n",
     "    mRNA_ax = plt.subplot2grid((2,2), (0,1), rowspan=2)\n",
@@ -641,7 +792,7 @@
     "    mRNA_ax.spines['right'].set_visible(False)\n",
     "    mRNA_ax.set_xlabel('Time (hr)')\n",
     "    mRNA_ax.set_ylabel('# mRNAs')\n",
-    "    mRNA_ax.set_xticks([0, 10000, 3600 * 6])\n",
+    "    mRNA_ax.set_xticks([0, 10000, 3600 * 4, 3600 * 8])\n",
     "    mRNA_ax.xaxis.set_major_formatter(hours_1f_formatter)\n",
     "\n",
     "    fig.tight_layout()\n",
@@ -658,10 +809,10 @@
     "    xax_transform = plot_ax.get_xaxis_transform()\n",
     "    for gene, gene_dir, color in zip(genes, gene_directions, gene_colors):\n",
     "        base = gene[0] - (max_length * 0.34 * 0.01)\n",
-    "        plot_ax.plot([base, base], [20/(120 + max_gene_length), 0.33], linewidth=5, solid_capstyle='projecting', color=color, transform=xax_transform, clip_on=False)\n",
-    "        plot_ax.plot([base, base + gene_dir * (max_length * 0.34 * 0.06)], [0.33, 0.33], linewidth=5, solid_capstyle='projecting', color=color, transform=xax_transform, clip_on=False)\n",
-    "        plot_ax.add_artist(matplotlib.patches.FancyArrow(base + gene_dir * (max_length * 0.34 * 0.06), 0.33, gene_dir, 0,\n",
-    "            width=0.1, head_width=0.1, head_length=max_length * 0.34 * 0.05, color=color, transform=xax_transform, clip_on=False))\n",
+    "        plot_ax.plot([base, base], [20/(120 + max_gene_length), 0.23], linewidth=4, solid_capstyle='projecting', color=color, transform=xax_transform, clip_on=False)\n",
+    "        plot_ax.plot([base, base + gene_dir * (max_length * 0.34 * 0.13)], [0.23, 0.23], linewidth=4, solid_capstyle='projecting', color=color, transform=xax_transform, clip_on=False)\n",
+    "        plot_ax.add_artist(matplotlib.patches.FancyArrow(base + gene_dir * (max_length * 0.34 * 0.13), 0.23, gene_dir, 0,\n",
+    "            width=0.08, head_width=0.08, head_length=max_length * 0.34 * 0.08, color=color, transform=xax_transform, clip_on=False))\n",
     "\n",
     "\n",
     "    plot_ax.plot([0, max_length], [0, 0], color=main_palette['light_gray']+'55', linewidth=14, zorder=0, solid_capstyle='butt')\n",
@@ -720,7 +871,7 @@
     "            segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
     "            polymerases.set_data(rnap_locs[1:-1], np.zeros_like(rnap_locs[1:-1]))\n",
     "            mRNA_base = np.array([rnap_locs[1:-1], np.zeros(rnap_locs[1:-1].shape)]).T.reshape(-1,1,2)\n",
-    "            mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases]]).T.reshape(-1,1,2)\n",
+    "            mRNA_tail = np.array([rnap_locs[1:-1], frame_vals['mRNA_length'][:n_polymerases] / 5]).T.reshape(-1,1,2)\n",
     "            mRNA_segments = np.concatenate([mRNA_base, mRNA_tail], axis=1)\n",
     "            mRNA_lines.set_segments(mRNA_segments)\n",
     "        else:\n",
@@ -736,10 +887,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_animation(movie_examples['tangles_full_run.000018'], [main_palette['tandem'], main_palette['gray']], 0, rd.outfile(rd.rootdir/'output'/'test_out_tandem_upstream.mp4'), 15*30, tspan=[0,3600*6], mRNA_remap={0:1, 1:0})\n",
-    "gen_animation(movie_examples['tangles_full_run.000022'], [main_palette['gray'], main_palette['tandem_alt']], 1, rd.outfile(rd.rootdir/'output'/'test_out_tandem_downstream.mp4'), 15*30, tspan=[0,3600*6])\n",
-    "gen_animation(movie_examples['tangles_full_run.000025'], [main_palette['gray'], main_palette['convergent']], 2, rd.outfile(rd.rootdir/'output'/'test_out_convergent.mp4'), 15*30, tspan=[0,3600*6])\n",
-    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 3, rd.outfile(rd.rootdir/'output'/'test_out_divergent.mp4'), 15*30, tspan=[0,3600*6])"
+    "gen_animation(movie_examples['tangles_full_run.000018'], [main_palette['tandem'], main_palette['gray']], 'Tandem upstream syntax', 'upstream dominance',\n",
+    "    rd.outfile(rd.rootdir/'output'/'presentation_short_tandem_upstream.mp4'), 25*20, tspan=[0,3600*8], mRNA_remap={0:1, 1:0}, dpi=270)\n",
+    "gen_animation(movie_examples['tangles_full_run.000022'], [main_palette['gray'], main_palette['tandem_alt']], 'Tandem downstream syntax', 'upstream dominance',\n",
+    "    rd.outfile(rd.rootdir/'output'/'presentation_short_tandem_downstream.mp4'), 25*20, tspan=[0,3600*8], dpi=270)\n",
+    "gen_animation(movie_examples['tangles_full_run.000025'], [main_palette['gray'], main_palette['convergent']], 'Convergent syntax', 'either-or bursting',\n",
+    "    rd.outfile(rd.rootdir/'output'/'presentation_short_convergent.mp4'), 25*20, tspan=[0,3600*8], dpi=270)\n",
+    "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 'Divergent syntax', 'coordinated busrting',\n",
+    "    rd.outfile(rd.rootdir/'output'/'presentation_short_divergent.mp4'), 25*20, tspan=[0,3600*8], dpi=270)"
    ]
   }
  ],
