Added image analysis for lentivirus integration

--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -896,6 +896,43 @@
     "gen_animation(movie_examples['tangles_full_run.000027'], [main_palette['gray'], main_palette['divergent']], 'Divergent syntax', 'coordinated busrting',\n",
     "    rd.outfile(rd.rootdir/'output'/'presentation_short_divergent.mp4'), 25*20, tspan=[0,3600*8], dpi=270)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Kasey's lentivirus Cellprofiler dataset\n",
+    "lentivirus_primary_objects = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisIdentifyPrimaryObjects.csv', 'lentivirus_images'))\n",
+    "lentivirus_conditions = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisImage.csv')).set_index('ImageNumber')\n",
+    "lentivirus_data = lentivirus_primary_objects.join(lentivirus_conditions, 'ImageNumber')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lentivirus_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(3,2))\n",
+    "sns.kdeplot(data=lentivirus_data, x='Intensity_MaxIntensity_Red', hue='Metadata_Condition', palette={'tandem': main_palette['tandem'], 'divergent': main_palette['divergent']}, legend=None)\n",
+    "sns.despine()\n",
+    "plt.xlabel('Max cell intensity')\n",
+    "plt.text(0.02, 7, 'Tandem', color=main_palette['tandem'])\n",
+    "plt.text(0.02, 6.4, 'Divergent', color=main_palette['divergent'])\n",
+    "plt.savefig(rd.outfile(rd.rootdir/'img'/'presentation_viral_context.svg', 'lentivirus_images'), bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
