--- a/notebooks/seminar_figures.ipynb
+++ b/notebooks/seminar_figures.ipynb
@@ -906,16 +906,8 @@
     "# Load Kasey's lentivirus Cellprofiler dataset\n",
     "lentivirus_primary_objects = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisIdentifyPrimaryObjects.csv', 'lentivirus_images'))\n",
     "lentivirus_conditions = pd.read_csv(rd.infile(rd.datadir/'projects'/'tangles'/'images'/'viral_analysisImage.csv')).set_index('ImageNumber')\n",
-    "lentivirus_data = lentivirus_primary_objects.join(lentivirus_conditions, 'ImageNumber')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lentivirus_data.columns"
+    "lentivirus_data = lentivirus_primary_objects.join(lentivirus_conditions, 'ImageNumber')\n",
+    "lentivirus_data['Intensity_MaxIntensity_Red'] *= 4.0"
    ]
   },
   {
@@ -928,8 +920,8 @@
     "sns.kdeplot(data=lentivirus_data, x='Intensity_MaxIntensity_Red', hue='Metadata_Condition', palette={'tandem': main_palette['tandem'], 'divergent': main_palette['divergent']}, legend=None)\n",
     "sns.despine()\n",
     "plt.xlabel('Max cell intensity')\n",
-    "plt.text(0.02, 7, 'Tandem', color=main_palette['tandem'])\n",
-    "plt.text(0.02, 6.4, 'Divergent', color=main_palette['divergent'])\n",
+    "plt.text(0.02, 1.7, 'Tandem', color=main_palette['tandem'])\n",
+    "plt.text(0.02, 1.5, 'Divergent', color=main_palette['divergent'])\n",
     "plt.savefig(rd.outfile(rd.rootdir/'img'/'presentation_viral_context.svg', 'lentivirus_images'), bbox_inches='tight')\n",
     "plt.show()"
    ]
